<resources>
    <!-- activity_main -->
    <string name="app_name">InterimExpress</string>
    <string name="nomAppli">Bienvenue sur InterimExpress</string>
    <string name="texteAccroche">Trouvez votre prochain emploi en quelques clics avec notre application d\'interim !</string>
    <string name="se_connecter">Se connecter</string>
    <string name="titreSeConnecter">Se connecter à votre compte</string>
    <string name="messageAnonyme">Continuer en tant qu\'anonyme</string>
    <string name="s_inscrire">S\'inscrire</string>


    <!-- login_main -->
    <string name="connecVous">Connectez-vous à votre compte</string>
    <string name="champEmail">Votre adresse mail</string>
    <string name="champMotdePasse">Votre mot de passe</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié</string>
    <string name="creer_compte">Créer mon compte</string>

    <!-- register_main -->
    <string name="champnom">Votre nom</string>
    <string name="champprenom">Votre prénom</string>
    <string name="champNationalite">Votre nationalité</string>
    <string name="champTel">Votre numéro de téléphone</string>
    <string name="champBirthdate">Votre date de naissance</string>
    <string name="champVille">Votre ville</string>

    <string name="agence">Agence</string>
    <string name="employeur">Employeur</string>
    <string name="candidat">Candidat</string>
    <string name="titreChoixRegister">Qui êtes-vous?</string>
    <string name="creer_compte_employe">Créer mon compte employé</string>
    <string name="nom_entreprise">Nom entreprise</string>
    <string name="titrePageInscriptionAgence">Créer mon compte agence</string>
    <string name="champNomAgence">Nom agence</string>
    <string name="et_nomAgence">Votre nom d\'agence</string>
    <string name="tv_nomService">Nom service/département</string>
    <string name="et_nomService">Votre nom de service/département</string>
    <string name="tv_nomSousService">Nom sous-service/sous-département</string>
    <string name="et_nomSousService">Votre nom de sous-service/sous-département</string>
    <string name="tv_numSiret">Numéro SIRET</string>
    <string name="et_numSiret">Votre numéro de SIRET</string>
    <string name="tv_contact1">Nom de contact principal</string>
    <string name="et_contact">Votre nom</string>
    <string name="tv_contact2">Nom de contact secondaire</string>
    <string name="tv_Mail">Adresse mail principale</string>
    <string name="tv_mail2">Adresse mail secondaire</string>
    <string name="tv_tel1">Numéro de téléphone principal</string>
    <string name="et_tel1">Votre téléphone principal</string>
    <string name="tv_tel2">Numéro de téléphone secondaire</string>
    <string name="et_tel2">Votre téléphone secondaire</string>
    <string name="tv_Adresse">Adresse</string>
    <string name="et_Adresse">Votre adresse</string>
    <string name="tv_codePostal">Code postal</string>
    <string name="tv_Ville">Ville</string>
    <string name="et_codePostal">Votre cp</string>
    <string name="et_Ville">Votre ville</string>
    <string name="tv_SiteWeb">Site web</string>
    <string name="et_SiteWeb">Lien de votre site web</string>
    <string name="tv_linkedin">LinkedIn</string>
    <string name="et_linkedin">Lien de votre LinkedIn</string>
    <string name="tv_Facebook">Facebook</string>
    <string name="et_Facebook">Lien de votre Facebook</string>
    <string name="tv_Mdp">Mot de passe</string>
    <string name="register_button">S\'inscrire</string>
    <string name="contentDescriptionBanniere">imageBanniere</string>
    <string name="contentDescriptionImgLogo">imageLogo</string>
    <string name="et_nomEntreprise">Votre nom d\'entreprise</string>


    <string name="rechercher"><i>Rechercher...</i></string>

    <string name="description_offre">• Capgemini accompagne les entreprises pour faire de leurs infrastructures un accélérateur de transformation digitale. Du conseil à la conception, de la réalisation  ... </string>
    <string name="description_offre2">Votre rôle et votre mission\nVotre futur environnement de travail :\nPartenaire de référence de toutes les branches de la Sécurité Sociale (Santé, Famille, Vieilless...</string>
    <string name="description_offre_details">Capgemini accompagne les entreprises pour faire de leurs infrastructures un accélérateur de transformation digitale. Du conseil à la conception, de la réalisation à la production, nous offrons à nos clients une gamme complète de services combinant sécurité, évolutivité, optimisation et innovation.

\n\nVous souhaitez contribuer à une vision dynamique des services d’infrastructure ? L’idée d’intégrer des équipes dynamiques, soudées et tournées vers les technologies de demain vous fait envie ? Alors rejoingnez dès aujourd’hui l’entité Cloud Infrastructure Services.

\n\nVotre rôle

\n\nMaintenir en condition opérationnelle les environnements technologiques sous votre responsabilité
\nAssurer une veille technologique dans les domaines sous votre responsabilité et être force de proposition
\nPiloter linfogérance
\nCoordonner de manière transverse les tickets de support et établir un reporting régulier des problèmes rencontrés
\nGérer les incidents de niveau 2 et de niveau 3
\nAssurer la résolution des problèmes techniques et les besoins clients
\nMettre en place une industrialisation des process existants
\nSuperviser la gestion du cycle de vie de tous les matériels relevant de votre domaine de responsabilité

\n\nVos compétences

\n\nVous disposez d\'au moins 3 années d\'expérience sur des postes d\'ingénieur de production ou équivalents. Vous êtes autonome, impliqué(e) et avez un bon esprit d\'équipe. Vous avez une première expérience en gestion de projets et gestion d\'équipe.

\n\nDisposer de certifications et de notions de performance soumises au KPI et/ou SLA sont des +

\n\nLes avantages à nous rejoindre

\n\nUne ambiance de travail dynamique et conviviale
\nUn CSE offrant de nombreux avantages (vacances, chèques cadeaux, titres restaurant…)
\nUne plateforme de formations en e-learning complète et diversifiée
\nUn Career manager qui vous accompagne tout au long de votre évolution
\nEt pour votre intégration, nous laissons nos collaborateurs vous en parler

\n\nhttps://www.capgemini.com/careers/life-at-capgemini/


\n\nCapgemini, entreprise handi accueillante, conformément à la norme AFNOR NF X50-783, est également signataire de la charte de la diversité en entreprise.</string>


</resources>