<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFAFF"
    tools:context=".view.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_dashboard14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomAppli"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textColor="#0A3A9A"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texteAccroche"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textColor="#0A3A9A"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/s_inscrire"
        android:background="@drawable/blue_btn_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize"
        style="@android:style/Widget.Button"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:background="@drawable/blue_btn_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize"
        style="@android:style/Widget.Button"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/continue_anonymously"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageAnonyme"
        android:textAlignment="center"
        android:textColor="#5B5B5B"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/login_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
