<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFAFF"
    tools:context=".view.activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_banner_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="28dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="13dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_banner_bottom"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintBottom_toTopOf="@id/guideline_logo_bottom"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/connecVous"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_titre"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_titre"
        android:textColor="#0757F6"
        android:textStyle="bold"
 />


    <EditText
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:background="@drawable/grey_edt_background"
        android:textColorHint="#636363"
        tools:ignore="VisualLintButtonSize"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        android:hint="@string/champEmail"
        android:padding="14sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:background="@drawable/grey_edt_background"
        android:textColorHint="#636363"
        tools:ignore="VisualLintButtonSize"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        android:hint="@string/champMotdePasse"
        android:padding="14sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:background="@drawable/blue_btn_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize"
        style="@android:style/Widget.Button"
        app:layout_constraintTop_toTopOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mdp_oublie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oublie"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:textAlignment="center"
        android:textColor="#5B5B5B"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        android:layout_marginTop="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
