<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFAFF"
    tools:context=".view.activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_banner_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="28dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="13dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />


    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_dashboard14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_banner_bottom"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        android:text="@string/titreChoixRegister"
        android:textAlignment="center"
        android:textColor="#064DD8"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"/>

    <ImageView
        android:id="@+id/logoCandidat"
        android:layout_width="145dp"
        android:layout_height="147dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/candidat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"/>

    <TextView
        android:id="@+id/titleCandidat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/candidat"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/logoCandidat"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start_titre"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end_titre"
        android:textColor="#0757F6"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/logoEmployeur"
        android:layout_width="145dp"
        android:layout_height="147dp"
        android:src="@drawable/employeur"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/titleEmployeur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:text="@string/employeur"
        android:textAlignment="center"
        android:textColor="#0757F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/logoEmployeur" />

    <ImageView
        android:id="@+id/logoAgence"
        android:layout_width="145dp"
        android:layout_height="147dp"
        android:src="@drawable/batiments"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <TextView
        android:id="@+id/titleAgence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:text="@string/agence"
        android:textAlignment="center"
        android:textColor="#0757F6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintTop_toBottomOf="@id/logoAgence" />

</androidx.constraintlayout.widget.ConstraintLayout>